fix alignment of boxes

--- a/css/projects.css
+++ b/css/projects.css
@@ -9,7 +9,7 @@ html {
 .content-wrap {
   max-width: 950px;
   margin: 0 auto;
-  padding: 50px;
+  padding: 30px;
   overflow: auto;
 }
 
